# ddd-with-fastapi

./: README.md  pyproject.toml  requirements.txt
api/: __init__.py
api/home/: home.py
api/user/v1/: user.py
app/: server.py
app/user/models/: user.py
app/user/services/: user.py
core/: config.py
core/db/: __init__.py  session.py  standalone_session.py
core/exceptions/: __init__.py
core/fastapi/: jsonable_encoder.py
core/fastapi/dependencies/: __init__.py
core/fastapi/middlewares/: __init__.py  authentication.py  sqlalchemy.py
core/fastapi/schemas/: __init__.py
core/helpers/: pandas.py
core/http_client/: client.py
core/pydantic/: base_model.py
core/repository/: base.py
core/utils/: camelcase.py  logger.py
migrations/: env.py
migrations/versions/: 005ce6e94401_create_user_table.py
