[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
PyJWT = "^2.4.0"
uvicorn = "^0.19.0"
fastapi = "^0.81.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
pytest = "^7.1.3"
psycopg2-binary = "^2.9.4"
asyncpg = "^0.27.0"
pandas = "^1.5.1"
arrow = "^1.2.3"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
